--- a/index.html
+++ b/index.html
@@ -15,6 +15,406 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>something</h1>
+    <header>
+      <a href="#"
+        >Simply Chocolate
+        <span>
+          <svg width="24" height="24">
+            <use href="./assets/icons/icons.svg#logo"></use>
+          </svg>
+        </span>
+      </a>
+      <nav>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">How it's made?</a></li>
+          <li><a href="">Chocolate is loved</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href="">
+            <svg width="24" height="24">
+              <use href="./assets/icons/icons.svg#fb"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <svg width="24" height="24">
+              <use href="./assets/icons/icons.svg#inst"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <svg width="24" height="24">
+              <use href="./assets/icons/icons.svg#twitter"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </header>
+
+    <main>
+      <section>
+        <h1>
+          Treat yourself or a loved one to our finest ingredients for a moment
+          of pure delight!
+        </h1>
+        <button type="button">Buy now</button>
+        <a href="">How it's made</a>
+        <button type="button">
+          scroll down
+          <span>
+            <svg width="22" height="22">
+              <use href="./assets/icons/icons.svg#scroll-down-arrow"></use>
+            </svg>
+          </span>
+        </button>
+      </section>
+
+      <section>
+        <ul>
+          <li>
+            <span>
+              <svg width="32" height="32">
+                <use
+                  href="./assets/icons/icons.svg#features-chocolate-bar"
+                ></use>
+              </svg>
+            </span>
+            <h3>Unsurpassed taste</h3>
+            <p>
+              Crafted with the finest quality cocoa beans and a dedication to
+              perfection, each bite is a decadent experience that simply cannot
+              be matched. Savor the richness and complexity of our Unsurpassed
+              Taste and discover a new level of chocolate bliss.
+            </p>
+          </li>
+          <li>
+            <span>
+              <svg width="32" height="32">
+                <use href="./assets/icons/icons.svg#features-price"></use>
+              </svg>
+            </span>
+            <h3>Affordable price</h3>
+            <p>
+              Indulge in high-quality chocolate without breaking the bank with
+              Simply Chocolate's selection of affordable treats. Enjoy
+              mouth-watering truffles and velvety chocolate bars without
+              sacrificing taste or quality. Browse our selection and indulge in
+              affordable luxury today.
+            </p>
+          </li>
+          <li>
+            <span>
+              <svg width="32" height="32">
+                <use href="./assets/icons/icons.svg#features-spoon"></use>
+              </svg>
+            </span>
+            <h3>Own production</h3>
+            <p>
+              We take pride in our own production process, ensuring that every
+              step is carefully crafted to perfection. From selecting the finest
+              ingredients to handcrafting each piece, our attention to detail is
+              evident in every bite.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>It all adds up to one exceptional taste sensation</h2>
+        <ul>
+          <li>
+            <img
+              src="./assets/images/ingredients-milk-chocolate.png"
+              alt="Pieces of milk chocolate"
+            />
+            <h3>Milk Chocolate</h3>
+          </li>
+          <li>
+            <img
+              src="./assets/images/ingredients-milk.png"
+              alt="A bottle of milk"
+            />
+            <h3>Milk</h3>
+          </li>
+          <li>
+            <img
+              src="./assets/images/ingredients-nuts.png"
+              alt="A couple of nuts"
+            />
+            <h3>Nuts</h3>
+          </li>
+          <li>
+            <img
+              src="./assets/images/ingredients-semi-sweet-chocolate.png"
+              alt=""
+            />
+            <h3>Semi - Sweet Chocolate</h3>
+          </li>
+          <li>
+            <img
+              src="./assets/images/ingredients-cacao.png"
+              alt="A handful of chocolate candies"
+            />
+            <h3>Cacao</h3>
+          </li>
+          <li>
+            <img
+              src="./assets/images/ingredients-raspberry.png"
+              alt="A few raspberries"
+            />
+            <h3>Raspberry</h3>
+          </li>
+          <li>
+            <img
+              src="./assets/images/ingredients-coconut-oil.png"
+              alt="sliced coconut"
+            />
+            <h3>Coconut Oil</h3>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <div class="thumb">
+          <img
+            src="./assets/images/how-its-made-img.jpg"
+            alt="Liquid chocolate"
+          />
+        </div>
+        <h3>
+          Try our chocolates today and discover the perfect balance of flavor
+        </h3>
+        <ul>
+          <li>
+            <p>
+              Heat the milk in a saucepan without bringing it to a boil. Add
+              sugar and cocoa powder.
+            </p>
+          </li>
+          <li>
+            <p>
+              At the same time, prepare a water bath. Melt the butter on it.
+            </p>
+          </li>
+          <li>
+            <p>
+              "Mix" the milk mixture and already liquid butter. Mix thoroughly
+              with a silicone spatula so that the mass becomes uniform and
+              silky.
+            </p>
+          </li>
+          <li>
+            <p>Heat the mixture over low heat, letting it barely boil.</p>
+          </li>
+          <li>
+            <p>
+              Pour the chocolate into special containers (can be replaced with
+              ice molds). Allow to cool and harden.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Our products</h2>
+        <ul>
+          <li>
+            <img
+              src="./assets/images/products-orange.png"
+              alt="A dark chocolate bar with orange and its wrapper"
+            />
+            <h3>Orange</h3>
+            <p>Dark chocolate</p>
+            <p>45 UAH</p>
+          </li>
+          <li>
+            <img
+              src="./assets/images/products-apple-cranberry.png"
+              alt="A milk chocolate bar with apple and cranberry and its wrapper"
+            />
+            <h3>Apple&Cranberry</h3>
+            <p>Milk chocolate</p>
+            <p>50 UAH</p>
+          </li>
+          <li>
+            <img
+              src="./assets/images/products-lime-sea-salt.png"
+              alt="A dark chocolate bar with lime and sea salt and its wrapper"
+            />
+            <h3>lime&sea salt</h3>
+            <p>Dark chocolate</p>
+            <p>66 UAH</p>
+          </li>
+          <li>
+            <img
+              src="./assets/images/products-pineapple.png"
+              alt="A dark chocolate bar with pineapple and its wrapper"
+            />
+            <h3>Pineapple</h3>
+            <p>Dark chocolate</p>
+            <p>54 UAH</p>
+          </li>
+          <li>
+            <img
+              src="./assets/images/products-classic-milk.png"
+              alt="Classic milk chocolate bar and its wrapper"
+            />
+            <h3>Classic</h3>
+            <p>Milk chocolate</p>
+            <p>45 UAH</p>
+          </li>
+          <li>
+            <img
+              src="./assets/images/products-honey.png"
+              alt="A milk chocolate bar with honey and its wrapper"
+            />
+            <h3>honey</h3>
+            <p>Milk chocolate</p>
+            <p>50 UAH</p>
+          </li>
+          <li>
+            <img
+              src="./assets/images/products-roasted-fruits.png"
+              alt="A dark chocolate bar with roasted fruits and its wrapper"
+            />
+            <h3>Roasted fruits</h3>
+            <p>Dark chocolate</p>
+            <p>66 UAH</p>
+          </li>
+          <li>
+            <img
+              src="./assets/images/products-classic-white.png"
+              alt="Classic white chocolate bar and its wrapper"
+            />
+            <h3>Classic</h3>
+            <p>White chocolate</p>
+            <p>54 UAH</p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Top sellers</h2>
+        <ul>
+          <li>
+            <div>
+              <img
+                src="./assets/images/top-sellers-chocolate-with-nuts.webp"
+                alt="Chocolate pieces in the form of a slide and nuts"
+              />
+            </div>
+            <h3>Chocolate With Nuts</h3>
+          </li>
+          <li>
+            <div>
+              <img
+                src="./assets/images/top-sellers-chocolate-with-fruits.webp"
+                alt="Chocolate pieces in the form of a slide with fruits"
+              />
+            </div>
+            <h3>Chocolate With Fruits</h3>
+          </li>
+          <li>
+            <div>
+              <img
+                src="./assets/images/top-sellers-dark-chocolate.webp"
+                alt="Dark chocolate pieces in the form of a slide"
+              />
+            </div>
+            <h3>Dark Chocolate</h3>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2></h2>
+        <ul>
+          <li>
+            <img src="./assets/images/reviewer-1.png" alt="Reviewer's photo" />
+            <h3>Victoria Dobrzhanska</h3>
+            <p>
+              I love this chocolate bar. Perfect combination of light crispy
+              wafer, covered in a thin layer chocolate.
+            </p>
+          </li>
+          <li>
+            <img src="./assets/images/reviewer-2.png" alt="Reviewer's photo" />
+            <h3>Nazar Babenko</h3>
+            <p>
+              This chocolate confection is a delight! A delight! The wafer is
+              light and crisp, the hazelnut cream is smooth, and the chocolate
+              is good.
+            </p>
+          </li>
+          <li>
+            <img src="./assets/images/reviewer-3.png" alt="Reviewer's photo" />
+            <h3>Olena Kampusch</h3>
+            <p>
+              Chocolate is a family favourite treat. Love the delicious smooth
+              chocolate and the creaminess inside. The wafer is soft but
+              crunchy.
+            </p>
+          </li>
+        </ul>
+        <button type="button">Leave a review</button>
+      </section>
+    </main>
+
+    <footer>
+      <div>
+        <p>Chocolate a delicious cure for a bad day</p>
+        <div>
+          <p>Social networks</p>
+          <ul>
+            <li>
+              <a href="#">
+                <svg width="24" height="24">
+                  <use href="./assets/icons/icons.svg#fb"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg width="24" height="24">
+                  <use href="./assets/icons/icons.svg#inst"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg width="24" height="24">
+                  <use href="./assets/icons/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <p>Contact us</p>
+          <address>
+            <a href="tel:+380684439426">+380 (68) 443-94-26</a>
+            <a href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
+          </address>
+        </div>
+      </div>
+      <div>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">How it's made?</a></li>
+            <li><a href="#">Chocolate is loved</a></li>
+          </ul>
+        </nav>
+        <form>
+          <input type="email" placeholder="Enter your email" />
+          <button type="submit">Subscribe</button>
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
