--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simply Chocolate</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
@@ -15,63 +21,76 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="#"
-        >Simply Chocolate
-        <span>
-          <svg width="24" height="24">
+    <header class="header">
+      <div class="container header-container">
+        <a href="#" class="header-logo-link">
+          <span class="header-logo-accent-word">Simply</span> Chocolate
+          <svg width="21" height="21" class="logo-icon">
             <use href="./assets/icons/icons.svg#logo"></use>
           </svg>
-        </span>
-      </a>
-      <nav>
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">How it's made?</a></li>
-          <li><a href="">Chocolate is loved</a></li>
+        </a>
+        <button type="button" class="header-mob-menu-btn">
+          <svg width="28" height="28">
+            <use href="./assets/icons/icons.svg#mob-menu"></use>
+          </svg>
+        </button>
+        <nav class="header-nav">
+          <ul class="header-nav-list">
+            <li><a href="">Home</a></li>
+            <li><a href="">How it's made?</a></li>
+            <li><a href="">Chocolate is loved</a></li>
+          </ul>
+        </nav>
+        <ul class="header-social-links-list">
+          <li class="header-social-links-item">
+            <a href="">
+              <svg width="24" height="24">
+                <use href="./assets/icons/icons.svg#fb"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="header-social-links-item">
+            <a href="">
+              <svg width="24" height="24">
+                <use href="./assets/icons/icons.svg#inst"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="header-social-links-item">
+            <a href="">
+              <svg width="24" height="24">
+                <use href="./assets/icons/icons.svg#twitter"></use>
+              </svg>
+            </a>
+          </li>
         </ul>
-      </nav>
-      <ul>
-        <li>
-          <a href="">
-            <svg width="24" height="24">
-              <use href="./assets/icons/icons.svg#fb"></use>
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <svg width="24" height="24">
-              <use href="./assets/icons/icons.svg#inst"></use>
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <svg width="24" height="24">
-              <use href="./assets/icons/icons.svg#twitter"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
-      <section>
-        <h1>
-          Treat yourself or a loved one to our finest ingredients for a moment
-          of pure delight!
-        </h1>
-        <button type="button">Buy now</button>
-        <a href="">How it's made</a>
-        <button type="button">
-          scroll down
-          <span>
-            <svg width="22" height="22">
-              <use href="./assets/icons/icons.svg#scroll-down-arrow"></use>
-            </svg>
-          </span>
-        </button>
+      <section class="hero">
+        <div class="container">
+          <div class="hero-content-wrapper">
+            <h1 class="hero-title">
+              Treat yourself or a loved one to our finest ingredients for a
+              moment of pure delight!
+            </h1>
+            <div class="hero-buttons-wrapper">
+              <button type="button" class="hero-buy-btn">Buy now</button>
+              <a href="" class="hero-link">How it's made</a>
+              <button type="button" class="hero-scroll-btn">
+                scroll down
+                <span class="arrow-icon-container">
+                  <svg width="16" height="16">
+                    <use
+                      href="./assets/icons/icons.svg#scroll-down-arrow"
+                    ></use>
+                  </svg>
+                </span>
+              </button>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section>
