--- a/index.html
+++ b/index.html
@@ -76,12 +76,14 @@
               moment of pure delight!
             </h1>
             <div class="hero-buttons-wrapper">
-              <button type="button" class="hero-buy-btn">Buy now</button>
-              <a href="" class="hero-link">How it's made</a>
+              <div class="hero-button-link-wrapper">
+                <button type="button" class="hero-buy-btn">Buy now</button>
+                <a href="" class="hero-link">How it's made</a>
+              </div>
               <button type="button" class="hero-scroll-btn">
                 scroll down
                 <span class="arrow-icon-container">
-                  <svg width="16" height="16">
+                  <svg width="16" height="16" class="arrow-icon">
                     <use
                       href="./assets/icons/icons.svg#scroll-down-arrow"
                     ></use>
