mobile styles features, ingredients

--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
           </ul>
         </nav>
         <ul class="header-social-links-list">
-          <li class="header-social-links-item">
+          <li class="header-social-link">
             <a href="">
               <svg width="24" height="24">
                 <use href="./assets/icons/icons.svg#fb"></use>
               </svg>
             </a>
           </li>
-          <li class="header-social-links-item">
+          <li class="header-social-link">
             <a href="">
               <svg width="24" height="24">
                 <use href="./assets/icons/icons.svg#inst"></use>
               </svg>
             </a>
           </li>
-          <li class="header-social-links-item">
+          <li class="header-social-link">
             <a href="">
               <svg width="24" height="24">
                 <use href="./assets/icons/icons.svg#twitter"></use>
@@ -95,109 +95,146 @@
         </div>
       </section>
 
-      <section>
-        <ul>
-          <li>
-            <span>
-              <svg width="32" height="32">
-                <use
-                  href="./assets/icons/icons.svg#features-chocolate-bar"
-                ></use>
-              </svg>
-            </span>
-            <h3>Unsurpassed taste</h3>
-            <p>
-              Crafted with the finest quality cocoa beans and a dedication to
-              perfection, each bite is a decadent experience that simply cannot
-              be matched. Savor the richness and complexity of our Unsurpassed
-              Taste and discover a new level of chocolate bliss.
-            </p>
-          </li>
-          <li>
-            <span>
-              <svg width="32" height="32">
-                <use href="./assets/icons/icons.svg#features-price"></use>
-              </svg>
-            </span>
-            <h3>Affordable price</h3>
-            <p>
-              Indulge in high-quality chocolate without breaking the bank with
-              Simply Chocolate's selection of affordable treats. Enjoy
-              mouth-watering truffles and velvety chocolate bars without
-              sacrificing taste or quality. Browse our selection and indulge in
-              affordable luxury today.
-            </p>
-          </li>
-          <li>
-            <span>
-              <svg width="32" height="32">
-                <use href="./assets/icons/icons.svg#features-spoon"></use>
-              </svg>
-            </span>
-            <h3>Own production</h3>
-            <p>
-              We take pride in our own production process, ensuring that every
-              step is carefully crafted to perfection. From selecting the finest
-              ingredients to handcrafting each piece, our attention to detail is
-              evident in every bite.
-            </p>
-          </li>
-        </ul>
+      <section class="features">
+        <div class="features-content-wrapper">
+          <div class="container">
+            <ul class="features-list">
+              <li class="feature-item">
+                <span class="feature-icon-container">
+                  <svg width="28" height="28">
+                    <use
+                      href="./assets/icons/icons.svg#features-chocolate-bar"
+                    ></use>
+                  </svg>
+                </span>
+                <h3 class="feature-item-title">Unsurpassed taste</h3>
+                <p class="feature-item-text">
+                  Crafted with the finest quality cocoa beans and a dedication
+                  to perfection, each bite is a decadent experience that simply
+                  cannot be matched. Savor the richness and complexity of our
+                  Unsurpassed Taste and discover a new level of chocolate bliss.
+                </p>
+              </li>
+              <li class="feature-item">
+                <span class="feature-icon-container">
+                  <svg width="28" height="28">
+                    <use href="./assets/icons/icons.svg#features-price"></use>
+                  </svg>
+                </span>
+                <h3 class="feature-item-title">Affordable price</h3>
+                <p class="feature-item-text">
+                  Indulge in high-quality chocolate without breaking the bank
+                  with Simply Chocolate's selection of affordable treats. Enjoy
+                  mouth-watering truffles and velvety chocolate bars without
+                  sacrificing taste or quality. Browse our selection and indulge
+                  in affordable luxury today.
+                </p>
+              </li>
+              <li class="feature-item">
+                <span class="feature-icon-container">
+                  <svg width="28" height="28">
+                    <use href="./assets/icons/icons.svg#features-spoon"></use>
+                  </svg>
+                </span>
+                <h3 class="feature-item-title">Own production</h3>
+                <p class="feature-item-text">
+                  We take pride in our own production process, ensuring that
+                  every step is carefully crafted to perfection. From selecting
+                  the finest ingredients to handcrafting each piece, our
+                  attention to detail is evident in every bite.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
 
-      <section>
-        <h2>It all adds up to one exceptional taste sensation</h2>
-        <ul>
-          <li>
-            <img
-              src="./assets/images/ingredients-milk-chocolate.png"
-              alt="Pieces of milk chocolate"
-            />
-            <h3>Milk Chocolate</h3>
-          </li>
-          <li>
-            <img
-              src="./assets/images/ingredients-milk.png"
-              alt="A bottle of milk"
-            />
-            <h3>Milk</h3>
-          </li>
-          <li>
-            <img
-              src="./assets/images/ingredients-nuts.png"
-              alt="A couple of nuts"
-            />
-            <h3>Nuts</h3>
-          </li>
-          <li>
-            <img
-              src="./assets/images/ingredients-semi-sweet-chocolate.png"
-              alt=""
-            />
-            <h3>Semi - Sweet Chocolate</h3>
-          </li>
-          <li>
-            <img
-              src="./assets/images/ingredients-cacao.png"
-              alt="A handful of chocolate candies"
-            />
-            <h3>Cacao</h3>
-          </li>
-          <li>
-            <img
-              src="./assets/images/ingredients-raspberry.png"
-              alt="A few raspberries"
-            />
-            <h3>Raspberry</h3>
-          </li>
-          <li>
-            <img
-              src="./assets/images/ingredients-coconut-oil.png"
-              alt="sliced coconut"
-            />
-            <h3>Coconut Oil</h3>
-          </li>
-        </ul>
+      <section class="ingredients">
+        <div class="container">
+          <h2 class="ingredients-title">
+            It all adds up to one exceptional
+            <span class="ingredients-title-accent">taste</span> sensation
+          </h2>
+          <ul class="ingredients-list">
+            <li class="ingredient-item">
+              <svg width="24" height="24" class="ingredient-item-icon">
+                <use href="./assets/icons/icons.svg#ingredients-arrow"></use>
+              </svg>
+              <img
+                class="ingredient-item-img"
+                src="./assets/images/ingredients-milk-chocolate-mob.webp"
+                alt="Pieces of milk chocolate"
+              />
+              <h3 class="ingredients-item-title">Milk Chocolate</h3>
+            </li>
+            <li class="ingredient-item">
+              <svg width="24" height="24" class="ingredient-item-icon">
+                <use href="./assets/icons/icons.svg#ingredients-arrow"></use>
+              </svg>
+              <img
+                class="ingredient-item-img"
+                src="./assets/images/ingredients-milk-mob.webp"
+                alt="A bottle of milk"
+              />
+              <h3 class="ingredients-item-title">Milk</h3>
+            </li>
+            <li class="ingredient-item">
+              <svg width="24" height="24" class="ingredient-item-icon">
+                <use href="./assets/icons/icons.svg#ingredients-arrow"></use>
+              </svg>
+              <img
+                class="ingredient-item-img"
+                src="./assets/images/ingredients-nuts-mob.webp"
+                alt="A couple of nuts"
+              />
+              <h3 class="ingredients-item-title">Nuts</h3>
+            </li>
+            <li class="ingredient-item">
+              <svg width="24" height="24" class="ingredient-item-icon">
+                <use href="./assets/icons/icons.svg#ingredients-arrow"></use>
+              </svg>
+              <img
+                class="ingredient-item-img"
+                src="./assets/images/ingredients-semi-sweet-chocolate-mob.webp"
+                alt=""
+              />
+              <h3 class="ingredients-item-title">Semi - Sweet Chocolate</h3>
+            </li>
+            <li class="ingredient-item">
+              <svg width="24" height="24" class="ingredient-item-icon">
+                <use href="./assets/icons/icons.svg#ingredients-arrow"></use>
+              </svg>
+              <img
+                class="ingredient-item-img"
+                src="./assets/images/ingredients-cacao.png"
+                alt="A handful of chocolate candies"
+              />
+              <h3 class="ingredients-item-title">Cacao</h3>
+            </li>
+            <li class="ingredient-item">
+              <svg width="24" height="24" class="ingredient-item-icon">
+                <use href="./assets/icons/icons.svg#ingredients-arrow"></use>
+              </svg>
+              <img
+                class="ingredient-item-img"
+                src="./assets/images/ingredients-raspberry.png"
+                alt="A few raspberries"
+              />
+              <h3 class="ingredients-item-title">Raspberry</h3>
+            </li>
+            <li class="ingredient-item">
+              <svg width="24" height="24" class="ingredient-item-icon">
+                <use href="./assets/icons/icons.svg#ingredients-arrow"></use>
+              </svg>
+              <img
+                class="ingredient-item-img"
+                src="./assets/images/ingredients-coconut-oil.png"
+                alt="sliced coconut"
+              />
+              <h3 class="ingredients-item-title">Coconut Oil</h3>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section>
