--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="container">
           <h2 class="ingredients-title">
             It all adds up to one exceptional
-            <span class="ingredients-title-accent">taste</span> sensation
+            <span class="section-title-accent">taste</span> sensation
           </h2>
           <ul class="ingredients-list">
             <li class="ingredient-item">
@@ -240,7 +240,7 @@
       <section class="how-its-made">
         <div class="container">
           <h2 class="how-its-made-title">
-            How it's <span class="how-its-made-title-accent">made?</span>
+            How it's <span class="section-title-accent">made?</span>
           </h2>
           <div class="how-its-made-thumb">
             <img
@@ -294,7 +294,7 @@
       <section class="products">
         <div class="container">
           <h2 class="products-title">
-            Our <span class="products-title-accent">products</span>
+            Our <span class="section-title-accent">products</span>
           </h2>
           <ul class="products-list">
             <li class="product-item">
@@ -400,7 +400,7 @@
       <section class="top-sellers">
         <div class="container">
           <h2 class="top-sellers-title">
-            <span class="top-sellers-title-accent">Top</span> sellers
+            <span class="section-title-accent">Top</span> sellers
           </h2>
           <ul class="top-sellers-list">
             <li class="top-seller-item">
@@ -464,89 +464,125 @@
         </div>
       </section>
 
-      <section>
-        <h2></h2>
-        <ul>
-          <li>
-            <img src="./assets/images/reviewer-1.png" alt="Reviewer's photo" />
-            <h3>Victoria Dobrzhanska</h3>
-            <p>
-              I love this chocolate bar. Perfect combination of light crispy
-              wafer, covered in a thin layer chocolate.
-            </p>
-          </li>
-          <li>
-            <img src="./assets/images/reviewer-2.png" alt="Reviewer's photo" />
-            <h3>Nazar Babenko</h3>
-            <p>
-              This chocolate confection is a delight! A delight! The wafer is
-              light and crisp, the hazelnut cream is smooth, and the chocolate
-              is good.
-            </p>
-          </li>
-          <li>
-            <img src="./assets/images/reviewer-3.png" alt="Reviewer's photo" />
-            <h3>Olena Kampusch</h3>
-            <p>
-              Chocolate is a family favourite treat. Love the delicious smooth
-              chocolate and the creaminess inside. The wafer is soft but
-              crunchy.
-            </p>
-          </li>
-        </ul>
-        <button type="button">Leave a review</button>
+      <section class="reviews">
+        <div class="container">
+          <h2 class="reviews-title">
+            <span class="section-title-accent">Chocolate</span> is loved
+          </h2>
+          <ul class="reviews-list">
+            <li class="review-item">
+              <div class="review-item-img-thumb">
+                <img
+                  src="./assets/images/reviewer-1.png"
+                  alt="Reviewer's photo"
+                />
+              </div>
+              <h3 class="review-item-name">Victoria Dobrzhanska</h3>
+              <p class="review-item-text-review">
+                I love this chocolate bar. Perfect combination of light crispy
+                wafer, covered in a thin layer chocolate.
+              </p>
+            </li>
+            <li class="review-item">
+              <div class="review-item-img-thumb">
+                <img
+                  src="./assets/images/reviewer-2.png"
+                  alt="Reviewer's photo"
+                />
+              </div>
+              <h3 class="review-item-name">Nazar Babenko</h3>
+              <p class="review-item-text-review">
+                This chocolate confection is a delight! A delight! The wafer is
+                light and crisp, the hazelnut cream is smooth, and the chocolate
+                is good.
+              </p>
+            </li>
+            <li class="review-item">
+              <div class="review-item-img-thumb">
+                <img
+                  src="./assets/images/reviewer-3.png"
+                  alt="Reviewer's photo"
+                />
+              </div>
+              <h3 class="review-item-name">Olena Kampusch</h3>
+              <p class="review-item-text-review">
+                Chocolate is a family favourite treat. Love the delicious smooth
+                chocolate and the creaminess inside. The wafer is soft but
+                crunchy.
+              </p>
+            </li>
+          </ul>
+          <button type="button" class="leave-review-btn">Leave a review</button>
+        </div>
       </section>
     </main>
 
-    <footer>
-      <div>
-        <p>Chocolate a delicious cure for a bad day</p>
-        <div>
-          <p>Social networks</p>
-          <ul>
-            <li>
-              <a href="#">
-                <svg width="24" height="24">
-                  <use href="./assets/icons/icons.svg#fb"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <svg width="24" height="24">
-                  <use href="./assets/icons/icons.svg#inst"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <svg width="24" height="24">
-                  <use href="./assets/icons/icons.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+    <footer class="footer">
+      <div class="container">
+        <p class="footer-title">
+          <span class="section-title-accent">Chocolate</span> a delicious cure
+          for a bad day
+        </p>
+        <div class="footer-social-links-address-wrapper">
+          <div>
+            <p class="footer-social-links-title">Social networks</p>
+            <ul class="footer-social-links-list">
+              <li class="footer-social-links-item">
+                <a href="#" class="footer-social-link">
+                  <svg width="24" height="24" class="social-link-icon">
+                    <use href="./assets/icons/icons.svg#fb"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-links-item">
+                <a href="#" class="footer-social-link">
+                  <svg width="24" height="24" class="social-link-icon">
+                    <use href="./assets/icons/icons.svg#inst"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-links-item">
+                <a href="#" class="footer-social-link">
+                  <svg width="24" height="24" class="social-link-icon">
+                    <use href="./assets/icons/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-address-wrapper">
+            <p class="footer-address-title">Contact us</p>
+            <address class="footer-address">
+              <a href="tel:+380684439426" class="footer-address-link"
+                >+380 (68) 443-94-26</a
+              >
+              <a href="mailto:simplychoc@gmail.com" class="footer-address-link"
+                >simplychoc@gmail.com</a
+              >
+            </address>
+          </div>
         </div>
-        <div>
-          <p>Contact us</p>
-          <address>
-            <a href="tel:+380684439426">+380 (68) 443-94-26</a>
-            <a href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
-          </address>
+        <div class="footer-nav-form-wrapper">
+          <nav>
+            <ul class="footer-nav-list">
+              <li><a href="#" class="footer-nav-link">Home</a></li>
+              <li><a href="#" class="footer-nav-link">How it's made?</a></li>
+              <li>
+                <a href="#" class="footer-nav-link">Chocolate is loved</a>
+              </li>
+            </ul>
+          </nav>
+          <form class="footer-form">
+            <input
+              type="email"
+              placeholder="Enter your email"
+              class="footer-form-email-input"
+            />
+            <button type="submit" class="footer-form-btn-subscribe">
+              Subscribe
+            </button>
+          </form>
         </div>
-      </div>
-      <div>
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">How it's made?</a></li>
-            <li><a href="#">Chocolate is loved</a></li>
-          </ul>
-        </nav>
-        <form>
-          <input type="email" placeholder="Enter your email" />
-          <button type="submit">Subscribe</button>
-        </form>
       </div>
     </footer>
   </body>
